--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body{
     width: 100%;
     height: 100%;
     background: url("images/space.png");
-    overflow: hidden;    
+    overflow: hidden;
+    font-size: 20px;
 }
 
 h1{
